--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -7,12 +7,24 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>signup</ion-title>
+    <ion-title>Rejestracja</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+	<ion-item>
+	    <ion-label floating>Email</ion-label>
+	    <ion-input type="text"></ion-input>
+  	</ion-item>
 
+	<ion-item>
+		<ion-label floating>Hasło</ion-label>
+	    <ion-input type="password"></ion-input>
+	</ion-item>
+
+  	<button ion-button block>Zarejestruj</button>
+
+  	<p ion-text color="danger">{{error}}</p>
 </ion-content>
