add auth function to login and signup pages

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -16,15 +16,15 @@
 <ion-content padding>
 	<ion-item>
 	    <ion-label floating>Email</ion-label>
-	    <ion-input type="text"></ion-input>
+	    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
   	</ion-item>
 
 	<ion-item>
 		<ion-label floating>Hasło</ion-label>
-	    <ion-input type="password"></ion-input>
+	    <ion-input type="password" [(ngModel)]="user.password"></ion-input>
 	</ion-item>
 
-  	<button ion-button block>Zarejestruj</button>
+  	<button ion-button block (click)="register(user)">Zarejestruj</button>
 
   	<p ion-text color="danger">{{error}}</p>
 </ion-content>
