--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -16,15 +16,15 @@
 <ion-content padding>
 	<ion-item>
 	    <ion-label floating>Email</ion-label>
-	    <ion-input type="text"></ion-input>
+	    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
   	</ion-item>
   	<ion-item>
 	    <ion-label floating>Hasło</ion-label>
-	    <ion-input type="password"></ion-input>
+	    <ion-input type="password" [(ngModel)]="user.password"></ion-input>
 	</ion-item>
 
-	<button ion-button block>Login</button>
-	<button ion-button block>Rejestracja</button>
+	<button ion-button block (click)="login(user)">Login</button>
+	<button ion-button block (click)="goToRegisterPage()">Rejestracja</button>
 
 	<p ion-text color="danger">{{error}}</p>
 </ion-content>
