--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,6 +9,13 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content >
+  <ion-list inset>
+    <ion-item *ngFor="let item of itemsList | async">
+      <ion-thumbnail item-left>
+        <img [src]="" />
+      </ion-thumbnail>
+      <h1>{{ item.name }}</h1>
+    </ion-item>
+</ion-list>
 </ion-content>
