--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
   <ion-list inset>
     <ion-item *ngFor="let item of itemsList | async">
       <ion-thumbnail item-left>
-        <img [src]="" />
+        <img [src]="_DomSanitizer.bypassSecurityTrustResourceUrl(item.image)" />
       </ion-thumbnail>
       <h1>{{ item.name }}</h1>
     </ion-item>
