--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,3 +19,27 @@
     </ion-item>
 </ion-list>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4>
+        <button ion-button icon-only clear full color="dark" (click)="goToHomePage()">
+          <ion-icon name="home"></ion-icon>
+        </button>
+        </ion-col>
+        <ion-col col-4>
+          <button ion-button icon-only clear full color="dark" (click)="goToAboutPage()">
+            <ion-icon name="information-circle"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col col-4>
+          <button ion-button icon-only clear full color="dark" (click)="goToContactPage()">
+            <ion-icon name="contacts"></ion-icon>
+          </button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
