edit about page

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,55 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Autorzy
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+	<ion-card>
+	  <ion-card-header>
+	    Marek Ślósarczyk
+	  </ion-card-header>
+	  <ion-card-content>
+	    <button ion-item>
+	    	<ion-icon name="mail" item-start></ion-icon>
+	    	slosarczyk.marek@gmail.com
+		</button>
+		<button ion-item>
+	    	<ion-icon name="logo-github" item-start></ion-icon>
+	   		maroooo
+		</button>
+	  </ion-card-content>
+	</ion-card>
+	<ion-card>
+	  <ion-card-header>
+	    Michał Feuer
+	  </ion-card-header>
+	  <ion-card-content>
+	  	<button ion-item>
+	    	<ion-icon name="mail" item-start></ion-icon>
+	    	grannyts@gmail.com
+		</button>
+		<button ion-item>
+	    	<ion-icon name="logo-github" item-start></ion-icon>
+	   		sofvindex
+		</button>
+	  </ion-card-content>
+	</ion-card>
+	<ion-card>
+	  <ion-card-header>
+	   	Łukasz Luty
+	  </ion-card-header>
+	  <ion-card-content>
+	  	<button ion-item>
+	    	<ion-icon name="mail" item-start></ion-icon>
+	   		lukasz.luty@gmail.com
+		</button>
+		<button ion-item>
+	    	<ion-icon name="logo-github" item-start></ion-icon>
+	   		wujek1
+		</button>
+	  </ion-card-content>
+	</ion-card>
 </ion-content>
