edit contact page

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,25 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Kontakt
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header><h2>Znajdziesz nas na:</h2></ion-list-header>
     <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      <ion-icon name="mail" item-start></ion-icon>
+      kontakt@pozyczki.pl
+    </ion-item>
+    <ion-item>
+      <ion-icon name="logo-facebook" item-start></ion-icon>
+      @pozyczki
+    </ion-item>
+    <ion-item>
+      <ion-icon name="logo-twitter" item-start></ion-icon>
+      @pozyczki
     </ion-item>
   </ion-list>
 </ion-content>
