add button and navigation to editItem page

--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -24,8 +24,8 @@
 			<h1><b>{{ item.person }}</b></h1>
 		</ion-item>
 
-			<!-- <button ion-button color='secondary' (click)="goToEditPage(itemId)" large>Edytuj
-		    </button> -->
+			<button ion-button color='secondary' (click)="goToEditPage(itemId)" large>Edytuj
+		    </button> 
 			<button ion-button color='danger' (click)="deleteItem(itemId)" large>Usuń
 		    </button>
 	</ion-content>
